--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,9 +1,9 @@
 .container {
   display: flex;
-  padding: 50px 0;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+
+  /* justify-content: flex-start; */
+  /* padding: 50px 0; */
+  /* align-items: center; */
 }
 
 @media screen and (max-width: 1100px) {
@@ -15,5 +15,6 @@
 @media screen and (max-width: 992px) {
   .container {
     padding: 0px;
+    flex-wrap: wrap;
   }
 }
