--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -2,9 +2,11 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  background-color: #ffff;
+  box-shadow: 0 4px 8px 5px rgba(0, 0, 0, 0.205);
+  background-color: rgba(255, 255, 255, 0.884);
   width: 500px;
+  overflow: scroll;
+  max-height: 95%;
 }
 .cardHeader {
   text-align: center;
@@ -34,6 +36,8 @@
 
 @media screen and (max-width: 992px) {
   .card {
+    position: relative;
     width: 100vw;
+    margin: 0 0;
   }
 }
