--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,9 +1,15 @@
 .container {
   display: flex;
+  justify-content: center;
+}
 
-  /* justify-content: flex-start; */
-  /* padding: 50px 0; */
-  /* align-items: center; */
+.loading,
+.error {
+  text-align: center;
+  padding: 8px;
+  border: 2px solid skyblue;
+  width: 50vw;
+  margin: 20px auto;
 }
 
 @media screen and (max-width: 1100px) {
