--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -6,7 +6,7 @@
   background-color: rgba(255, 255, 255, 0.884);
   width: 500px;
   overflow: scroll;
-  max-height: 95%;
+  max-height: 100vh;
 }
 .cardHeader {
   text-align: center;
